--- a/notebooks/Titanic A learning journey.ipynb
+++ b/notebooks/Titanic A learning journey.ipynb
@@ -70,8 +70,11 @@
     "train.describe(include=\"all\")\n",
     "\n",
     "# A small utility to see correlation\n",
-    "def ShowCorrelation (property):\n",
-    "    sns.pointplot(x=property , y=SURVIVED,  data=train )\n",
+    "def ShowCorrelation (property, ax = None):\n",
+    "    if ax is None:\n",
+    "        fig, ax = plt.subplots(1, 1,figsize=(8,6))\n",
+    "\n",
+    "    sns.pointplot(x=property, y=SURVIVED, data=train, ax = ax )\n",
     "    print (train[[SURVIVED,property]].groupby(property, as_index=False).agg(['count', 'mean']))\n"
    ]
   },
@@ -273,10 +276,14 @@
     "\n",
     "AGEBIN = 'AgeBin'\n",
     "#Age\n",
-    "train[AGEBIN] = pd.cut(train['Age'].astype(int), 5)\n",
-    "test[AGEBIN] = pd.cut(test['Age'].astype(int), 5)\n",
-    "\n",
+    "train[AGEBIN] = pd.cut(train[AGE].astype(int), 5)\n",
+    "test[AGEBIN] = pd.cut(test[AGE].astype(int), 5)\n",
     "ShowCorrelation (AGEBIN);\n",
+    "\n",
+    "FAMILY_SIZE = 'FamilySize'\n",
+    "train[FAMILY_SIZE] = train[SIBSP] + train[PARCH]\n",
+    "test[FAMILY_SIZE] = train[SIBSP] + train[PARCH]\n",
+    "\n",
     "#OH_X_valid = pd.concat([num_X_valid, OH_cols_valid], axis=1)\n",
     "\n",
     "#label = LabelEncoder()\n",
@@ -320,6 +327,18 @@
     "#data1.info()\n",
     "#data_val.info()\n",
     "#data1.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, saxis = plt.subplots(1, 3,figsize=(16,12))\n",
+    "ShowCorrelation (SIBSP, saxis[0]);\n",
+    "ShowCorrelation (PARCH, saxis[1]);\n",
+    "ShowCorrelation (FAMILY_SIZE, saxis[2]);"
    ]
   },
   {
@@ -380,6 +399,15 @@
     "# Evaluate the model\n",
     "#score = mean_absolute_error(y_valid, preds)\n",
     "#print('MAE:', score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
